k8s/app-prod/microservice1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1
  namespace: app-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1
    spec:
      containers:
        - name: microservice1
          image: ptd0409/capstone-microservice1:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: microservice1
  namespace: app-prod
spec:
  selector:
    app: microservice1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
