k8s/app-prod/microservice2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2
  namespace: app-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
        - name: microservice2
          image: ptd0409/capstone-microservice2:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: microservice2
  namespace: app-prod
spec:
  selector:
    app: microservice2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8082
