k8s/app-prod/spa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spa
  namespace: app-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa
  template:
    metadata:
      labels:
        app: spa
    spec:
      containers:
        - name: spa
          image: ptd0409/capstone-frontend:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: spa
  namespace: app-prod
spec:
  selector:
    app: spa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
