k8s/app-prod/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spa-ingress
  namespace: app-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: spa.prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spa
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice1-ingress
  namespace: app-prod
spec:
  ingressClassName: nginx
  rules:
    - host: microservice1.prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservice1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice2-ingress
  namespace: app-prod
spec:
  ingressClassName: nginx
  rules:
    - host: microservice2.prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservice2
                port:
                  number: 8080
