k8s/app-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spa-ingress
  namespace: app-prod
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: blooperry.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spa
                port:
                  number: 80
          - path: /customers
            pathType: Prefix
            backend:
              service:
                name: microservice1
                port:
                  number: 8080
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: microservice2
                port:
                  number: 8080
